# CFLU---Cybernetic-Function-Library-Unit

./: CMakeLists.txt  README.md
lib/: Factory.hpp  Function.cpp  Function.hpp
lib/test/: Function_test.cpp  Operations_test.cpp
